--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     </head>
 <body>
     <h1>Andy Godoy</h1>
+    <figure>
         <img src="file:///Users/andygodoy/Imagesforschool/IMG_5341.jpg" alt="picture of myself" style="width:30%;">
+        <figcaption>Enjoying a San Francisco Giants Game</figcaption>
+    </figure>    
         <main>
             
             <section id="About me">
@@ -35,10 +38,12 @@
         <footer>
                 <nav>
                     <ul>
-                      <li><a href="#About me">About Me</a></li>
-                      <li><a href="#Skills">Skills</a></li>
-                      <li><a href="#experience">Experience</a></li>
-                      <li><a href="#contact">Contact</a></li>
+                     <div class="link-container">
+                      <a href="#About me">About Me</a>
+                      <a href="#Skills">Skills</a>
+                      <a href="#experience">Experience</a>
+                      <a href="#contact">Contact</a>
+                     </div>
                     </ul>
                 </nav>
                  
