--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="#contact">Contact</a>
      </div>
     </ul>
-</nav>
+  </nav>
     <div class="container">
         <img src="file:///Users/andygodoy/Imagesforschool/IMG_5341.jpg" alt="picture of myself" style="width:30%;" class="bordered-image">
       </div>   
@@ -34,12 +34,12 @@
                 <p>This is where I write out my skills, if I have any. smirk smirk</p>
             </section>
 
-            <section id="Experience">
+            <section id="experience">
                 <h2>Experience</h2>
                 <p>This is where I write about my Experience, shit where do I begin</p>
             </section>
 
-            <section id="Contact">
+            <section id="contact">
                 <h2>Contact</h2>
                 <p>This is where I put my contact information</p>
             </section>
