--- a/index.html
+++ b/index.html
@@ -1,47 +1,60 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, intial-scale1.0">
-        <title>Andy Godoys Portfolio</title>
-        <link rel="stylesheet" href="assets/style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio Template</title>
+    <link rel="stylesheet" href="assets/style.css">
+</head>
 <body>
-  <h1>Andy Godoy</h1>
-  <nav>
-    <ul>
-     <div class="link-container">
-      <a href="#About me">About Me</a>
-      <a href="#Skills">Skills</a>
-      <a href="#experience">Experience</a>
-      <a href="#contact">Contact</a>
-     </div>
-    </ul>
-  </nav>
-    <div class="container">
-        <img src="file:///Users/andygodoy/Imagesforschool/IMG_5341.jpg" alt="picture of myself" style="width:30%;" class="bordered-image">
-      </div>   
-        <main>
-            <section id="About me">
-                <h2>About Me</h2>
-                <p>This is where I write a paragraph about myself and my interests.</p>
-                <br>
-                <p>I come from working at Rivian, which is an electric truck vehicle manufacture.</p>
-            </section>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-            <section id="Skills">
-                <h2>Skills</h2>
-                <p>This is where I write out my skills, if I have any. smirk smirk</p>
-            </section>
+    <section id="about">
+        <div class="container">
+            <h1>Andy Godoy</h1>
+            <img src="file:///Users/andygodoy/Imagesforschool/Image%20from%20iOS%20copy.jpg" alt="Developer's Photo" width="34%">
+            <img src="file:///Users/andygodoy/Imagesforschool/Image%20from%20iOS.jpg" alt="Driving 200SL GullWing" width="55%">
+            <p>Andy Godoy is a blue-collar worker. He has been in the automotive industry for the past 9 years, from working on carburators and classic cars to plugging into the future. 
+             Electric vehicles. He has dillegently worked side by side with engineers from all different types of teams to collaborate together to find quick and permanent solutuions. 
+             Fix it it right the first time atitidue. Recently found satisfaction in being able to diagnose concerns/probelems remotely, and possible fix them remotely. 
+             Planning to come back to automotive industry as some type of engineer since I am a car enthusiast at heart. </p>
+        </div>
+    </section>
 
-            <section id="experience">
-                <h2>Experience</h2>
-                <p>This is where I write about my Experience, shit where do I begin</p>
-            </section>
+    <section id="work">
+        <div class="container">
+            <h2>Work</h2>
+            <div class="work-gallery">
+                <a href="application1.html">
+                    <img src="file:///Users/andygodoy/Imagesforschool/Image%20from%20iOS%20(2).jpg" alt="Application 1" class="featured-image">
+                </a>
+                <a href="application2.html">
+                    <img src="https://images.pexels.com/photos/208745/pexels-photo-208745.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Application 2">
+                </a>
+                <a href="application3.html">
+                    <img src="https://www.builtinsf.com/cdn-cgi/image/f=auto,fit=contain/sites/www.builtinsf.com/files/styles/ckeditor_optimize/public/inline-images/shutterstock_398540542.jpg" alt="Application 3">
+                </a>
+            </div>
+        </div>
+    </section>
 
-            <section id="contact">
-                <h2>Contact</h2>
-                <p>This is where I put my contact information</p>
-            </section>
-        </main>
+    <footer id="contact" class="contact-section">
+        <div class="contact">
+          <ul class="footer-nav">
+            <li><a href="tel:123456789">415-599-6560</a></li>
+            <li><a href="mailto:example@example.com">Andygodoy@ymail.com</a></li>
+            <li><a href="https://github.com/AndyGodoy">GitHub</a></li>
+          </ul>
+        </div>
+    </footer>
+
 </body>
+</html>
