--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <h1>Andy Godoy</h1>
             <img src="file:///Users/andygodoy/Imagesforschool/Image%20from%20iOS%20copy.jpg" alt="Developer's Photo" width="34%">
             <img src="file:///Users/andygodoy/Imagesforschool/Image%20from%20iOS.jpg" alt="Driving 200SL GullWing" width="55%">
-            <p>Andy Godoy is a blue-collar worker. He has been in the automotive industry for the past 9 years, from working on carburators and classic cars to plugging into the future. 
-             Electric vehicles. He has dillegently worked side by side with engineers from all different types of teams to collaborate together to find quick and permanent solutuions. 
-             Fix it it right the first time atitidue. Recently found satisfaction in being able to diagnose concerns/probelems remotely, and possible fix them remotely. 
-             Planning to come back to automotive industry as some type of engineer since I am a car enthusiast at heart. </p>
+            <p>
+                The last decade, Andy Godoy has been working in the automotive industry. Shop foreman/lead he is a natural problem solver, from working on classic cars dating back to the 1800s to working on the future, “electric vehicles”. 
+                Neither are easy to diagnose. Collaborating with many different teams and working together side by side with field service engineers and iOS software team to find quick permanent fixes to any issues that may arise.
+                This year, Andy committed to learning how to code so he can apply it back in the automotive industry.  </p>
         </div>
     </section>
 
@@ -33,13 +33,13 @@
         <div class="container">
             <h2>Work</h2>
             <div class="work-gallery">
-                <a href="application1.html">
+                <a href="https://github.com/AndyGodoy">
                     <img src="file:///Users/andygodoy/Imagesforschool/Image%20from%20iOS%20(2).jpg" alt="Application 1" class="featured-image">
                 </a>
-                <a href="application2.html">
+                <a href="https://github.com/AndyGodoy">
                     <img src="https://images.pexels.com/photos/208745/pexels-photo-208745.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Application 2">
                 </a>
-                <a href="application3.html">
+                <a href="https://github.com/AndyGodoy">
                     <img src="https://www.builtinsf.com/cdn-cgi/image/f=auto,fit=contain/sites/www.builtinsf.com/files/styles/ckeditor_optimize/public/inline-images/shutterstock_398540542.jpg" alt="Application 3">
                 </a>
             </div>
