--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h2>Work</h2>
             <div class="work-gallery">
                 <a href="https://github.com/AndyGodoy">
-                    <img src="file:///Users/andygodoy/Imagesforschool/Image%20from%20iOS%20(2).jpg" alt="Application 1" class="featured-image">
+                    <img src="file:///Users/andygodoy/Imagesforschool/Image%20from%20iOS%20(2).jpg" alt="Driving a Porsche" class="featured-image">
                 </a>
                 <a href="https://github.com/AndyGodoy">
                     <img src="https://images.pexels.com/photos/208745/pexels-photo-208745.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Application 2">
