Image path URL issues

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <section id="about">
         <div class="container">
             <h1>Andy Godoy</h1>
-            <img src="file:///Users/andygodoy/Images/Image%20from%20iOS%20copy.jpg" alt="Picture of myself" width="34%">
-            <img src="file:///Users/andygodoy/Images/Image%20from%20iOS%203.jpg" alt="Driving 200SL GullWing" width="55%">
+            <img src="file:///Users/andygodoy/bootcamp/MyPortfolio_project/MyPortfolio/assets/Image%20from%20iOS%20copy.jpg" alt="Picture of myself" width="34%">
+            <img src="file:///Users/andygodoy/bootcamp/MyPortfolio_project/MyPortfolio/assets/Image%20from%20iOS.jpg" alt="Driving 200SL GullWing" width="55%">
             <p>
                 Over the past decade, Andy Godoy has immersed himself in the dynamic world of the automotive industry. As a shop foreman/lead, Andy's innate problem-solving abilities have been honed through working on a diverse range of vehicles, from timeless classic cars dating back to the 1800s to the cutting-edge technology of electric vehicles. Tackling the intricacies of these automotive marvels has never been an easy task.
 
@@ -43,7 +43,7 @@
             <h2>Work</h2>
             <div class="work-gallery">
                 <a href="https://github.com/AndyGodoy">
-                    <img src="file:///Users/andygodoy/Images/Image%20from%20iOS%20(2).jpg" alt="Driving a Porsche" class="featured-image">
+                    <img src="file:///Users/andygodoy/bootcamp/MyPortfolio_project/MyPortfolio/assets/Image%20from%20iOS%20(2).jpg" alt="Driving a Porsche speedster" class="featured-image">
                 </a>
                 <a href="https://github.com/AndyGodoy">
                     <img src="https://images.pexels.com/photos/208745/pexels-photo-208745.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Application 2">
