added project 1 link to my portfolio

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div class="container">
             <h2>Work</h2>
             <div class="work-gallery">
-                <a href="https://github.com/AndyGodoy">
+                <a href="https://jacob-kachmarek.github.io/dtc-solutions/">
                     <img src="assets/Image from iOS (2).jpg" alt="Driving a Porsche speedster" class="featured-image">
                 </a>
-                <a href="https://github.com/AndyGodoy">
+                <a href="https://jacob-kachmarek.github.io/dtc-solutions/">
                     <img src="https://images.pexels.com/photos/208745/pexels-photo-208745.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Application 2">
                 </a>
                 <a href="https://github.com/AndyGodoy">
